--- a/apps/front/src/assets/i18n/en.json
+++ b/apps/front/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
       "password": "Password",
       "email": "Email address",
       "remember": "Remember me",
-      "reset": "Forgot your password",
+      "reset": "Forgot your password ?",
       "signin": "Sign in",
       "failed": "Your Email or Password is wrong."
     }
